--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,13 @@
             <artifactId>javalin</artifactId>
             <version>6.7.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.34</version>
+        </dependency>
+
     </dependencies>
 
     <build>
